test/fail/hide-method.grace
constructor above {
  method name {}
}

object {
  inherits above

  def name = object {}
}
